--- a/src/components/ProjectPage/Info/index.scss
+++ b/src/components/ProjectPage/Info/index.scss
@@ -9,6 +9,14 @@
     width: 66%;
   }
 
+  &__body {
+    font-size: ($base-font-size);
+
+    @media screen and (min-width: 600px) {
+      font-size: ($base-font-size * 1.7);
+    }
+  }
+
   &__description {
     font-family: $alt-font-family;
     font-size: ($base-font-size * 1.5);
@@ -16,6 +24,7 @@
     margin-bottom: ($base-font-size * 1.2);
 
     @media screen and (min-width: 600px) {
+      font-size: ($base-font-size * 2.2);
       margin-bottom: ($base-font-size * 1.7);
     }
   }
