--- a/src/components/AboutMe/Info/index.scss
+++ b/src/components/AboutMe/Info/index.scss
@@ -1,6 +1,7 @@
 @import "../../../variables";
 
 .about-me__info {
+  font-size: ($base-font-size * 1.125);
   padding-top: $base-font-size;
   padding-bottom: $base-font-size;
 
