--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -49,39 +49,18 @@
   width: 100%;
   margin-bottom: 0;
   padding: ($base-font-size * 1.5) 0 0;
-  overflow: scroll;
+  overflow: initial;
   font-family: $alt-font-family;
   font-size: $base-font-size;
   font-weight: 500;
 
   @media screen and (max-width: 600px) {
-    overflow: scroll;
     height: 400px;
   }
-}
 
-.slick-dots {
-  padding-bottom: ($base-font-size * .5);
-
-  li {
-    height: ($base-font-size * .5);
-    width: ($base-font-size * .5);
-
-    button {
-      width: 100%;
-      height: 100%;
-      border: 1px solid white;
-      border-radius: 50%;
-
-      &::before {
-        content: '';
-      }
-    }
-  }
-
-  .slick-active {
-    button {
-      background: white;
+  .slick-arrow {
+    &:before {
+      color: initial;
     }
   }
 }
