--- a/src/components/ProjectPage/Footer/index.scss
+++ b/src/components/ProjectPage/Footer/index.scss
@@ -8,6 +8,10 @@
     height: 126px;
   }
 
+  &__background-image {
+    background-size: cover;
+  }
+
   &__project {
     width: 100%;
     height: 100%;
