--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -32,6 +32,12 @@
     }
   }
 
+  &__background-image {
+    @media screen and (max-width: 600px) {
+      background-color: white;
+    }
+  }
+
   &__container {
     position: absolute;
     background: white;
