--- a/src/components/MenuBar/index.scss
+++ b/src/components/MenuBar/index.scss
@@ -27,6 +27,7 @@
 
   &__icon {
     margin-top: -19px;
+    max-width: 24px;
 
     @media screen and (min-width: 600px) {
       margin-top: -26px;
