--- a/src/containers/AboutMe/index.scss
+++ b/src/containers/AboutMe/index.scss
@@ -63,6 +63,8 @@
       }
 
       &__image {
+        background-size: cover;
+        background-position: center;
         width: 100%;
         height: 76vw;
         margin-bottom: ($base-font-size * 1.1);
